@@ -261,6 +261,7 @@ module PageObject
     # @param [Hash] identifier how we find a link.  You can use a multiple paramaters
     #   by combining of any of the following except xpath.  The valid keys are:
     #   * :class => Watir and Selenium
+    #   * :css => Watir and Selenium
     #   * :href => Watir and Selenium
     #   * :id => Watir and Selenium
     #   * :index => Watir and Selenium
